byobu (5.83) unreleased; urgency=medium

  [ Dustin Kirkland ]
  * usr/bin/byobu-config.in: LP: #1316050
    - hard code LANG=C before launching byobu-config
  * usr/lib/byobu/include/dirs.in: LP: #1346869
    - be little smarter about detecting a usable /dev/shm

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 22 Jul 2014 07:21:56 -0700

byobu (5.82-0ubuntu1) utopic; urgency=medium

  * usr/bin/byobu-ctrl-a.in:
    - add bindkey line back, this line is *essential*; there was a
      syntax error in it previously, but removing the line was not
      the correct fix for LP: #1313209, #814172

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 22 Jul 2014 07:21:54 -0700

byobu (5.81-0ubuntu1) utopic; urgency=medium

  * usr/bin/byobu-enable.in, usr/share/man/man1/byobu-enable.1:
    - no need to launch byobu in byobu-enable (no idea why I did it
      that way originally)
  * debian/control, usr/bin/ctail, usr/share/man/man1/ctail.1:
    - move the ctail command over to byobu, from bikeshed
    - ctail will tail and colorize log files
  * debian/control, usr/bin/wifi-status, usr/share/man/man1/wifi-
    status.1:
    - move the wifi-status command to byobu, from bikeshed
    - fantastic demonstration of byobu split screens
  * debian/links, usr/bin/col1, usr/share/man/man1/col1.1:
    - move the col1..col9 utilities over from bikeshed
    - super handy, minimal way of awking out a particular column
  * usr/bin/Makefile.am, usr/share/man/man1/Makefile.am:
    - update automake files to install new utilities
  * usr/bin/ctail:
    - use command -v to test for ccze existence
  * debian/control, etc/profile.d/Z97-byobu.sh.in (properties changed:
    +x to -x):
    - update package description to better reflect modern Byobu
    - fix lintian complaint about profile script

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 06 Jul 2014 15:51:15 -0500

byobu (5.80-0ubuntu1) utopic; urgency=medium

  * usr/lib/byobu/include/mondrian: